WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293916
Fix nullptr crashes when clicking on site isolated iframes after
295636@main
https://bugs.webkit.org/show_bug.cgi?id=293916
Summary
Fix nullptr crashes when clicking on site isolated iframes after 295636@main
Alex Christensen
Reported
2025-06-02 12:37:07 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-06-02 12:37:17 PDT
<
rdar://problem/152448845
>
Alex Christensen
Comment 2
2025-06-02 12:38:24 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46218
EWS
Comment 3
2025-06-02 13:01:41 PDT
Committed
295707@main
(304d438ce4ca): <
https://commits.webkit.org/295707@main
> Reviewed commits have been landed. Closing PR #46218 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug