Fix nullptr crashes when clicking on site isolated iframes after 295636@main https://bugs.webkit.org/show_bug.cgi?id=293916 rdar://152448845

Reviewed by Megan Gardner and Tim Horton.

295636@main introduced 2 places where we derefernce a text indicator before checking if it's null.
I hit crashes when browsing the web.  Let's check for null and not crash.

* Source/WebCore/editing/cocoa/DictionaryLookup.mm:
(WebCore::showPopupOrCreateAnimationController):
* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::remoteDictionaryPopupInfoToRootView):

Canonical link: https://commits.webkit.org/295707@main